--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+        img {
+            width: 300px;
+            height: 200px;
+        }
+        ul {
+            list-style-type: disc;
+            text-align: left;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <img src="image.jpg" alt="Presentation Image">
+    <h1>Presentation Title</h1>
+    <ul>
+        <li>Bullet Point 1</li>
+        <li>Bullet Point 2</li>
+    </ul>
 </body>
 </html>
