--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             font-family: Arial, sans-serif;
         }
         img {
-            width: 300px;
-            height: 200px;
+            max-width: 100%;
+            height: auto;
         }
         ul {
             list-style-type: disc;
@@ -29,3 +29,4 @@
     </ul>
 </body>
 </html>
+
