--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <ul>
         <li>Bullet Point 1</li>
         <li>Bullet Point 2</li>
+        <li><a href="second.html">Go to Second Page</a></li>
     </ul>
 </body>
 </html>
