--- a/second.html
+++ b/second.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <iframe src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/pub?start=false&loop=true&delayms=10000' frameborder='0'>
+    <iframe src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/pub?start=false&loop=true&delayms=10000&embedded=true' frameborder='0'>
         <p>Your browser does not support iframes.</p>
     </iframe>
 </body>
