--- a/second.html
+++ b/second.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
-<html style='height: 100%;'>
+<html>
 <head>
-    <title>My Web Page with an iFrame</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden; /* Prevents scrollbars from appearing */
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none; /* Removes the border around the iframe */
-        }
-    </style>
+  <style>
+    .button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+      display: inline-block;
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
-    <iframe src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/pub?start=false&loop=true&delayms=10000&embedded=true' frameborder='0'>
-        <p>Your browser does not support iframes.</p>
-    </iframe>
+  <button class='button' onclick='previousSlide()'>Previous Slide</button>
+  <button class='button' onclick='nextSlide()'>Next Slide</button>
+
+  <br><br>
+
+  <iframe id='slides-iframe' src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/embed?start=true&loop=true&delayms=10000' frameborder='0' width='960' height='569' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe>
+
+<script>
+  var iframe = document.getElementById('slides-iframe');
+  
+  function previousSlide() {
+    iframe.contentWindow.postMessage('previous', '*');
+  }
+
+  function nextSlide() {
+    iframe.contentWindow.postMessage('next', '*');
+  }
+</script>
 </body>
 </html>
-";
