--- a/second.html
+++ b/second.html
@@ -2,34 +2,23 @@
 <html>
 <head>
   <style>
-    .button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      text-align: center;
-      display: inline-block;
-      font-size: 16px;
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #000;
+    }
+
+    #slides-iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <!-- <button class='button' onclick='previousSlide()'>Previous Slide</button>
-  <button class='button' onclick='nextSlide()'>Next Slide</button> -->
-
-  <br><br>
-
-  <iframe id='slides-iframe' src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/embed?start=true&loop=true&delayms=10000' frameborder='0' width='960' height='569' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe>
-
-<script>
-  var iframe = document.getElementById('slides-iframe');
-  
-//   function previousSlide() {
-//     iframe.contentWindow.postMessage('previous', '*');
-//   }
-
-//   function nextSlide() {
-//     iframe.contentWindow.postMessage('next', '*');
-//   }
-</script>
+  <iframe id='slides-iframe' src='https://docs.google.com/presentation/d/e/2PACX-1vTiIdBwstvpCxeC4_2u-mrkPEUSNYSLfZYK4VJwVlAr8lZwn10Y8vL7SHk7aSwJOvryBoixUdqz6iaj/embed?start=true&loop=true&delayms=10000' allowfullscreen='true' mozallowfullscreen='true' webkitallowfullscreen='true'></iframe>
 </body>
 </html>
