Third sway view

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li>Bullet Point 1</li>
         <li>Bullet Point 2</li>
         <li><a href="second.html">Go to Second Page</a></li>
+        <li><a href="third.html">Go to Third Page</a></li>
     </ul>
 </body>
 </html>
