--- a/third.html
+++ b/third.html
@@ -13,8 +13,8 @@
         overflow: hidden;
       }
       .webview-frame {
-        width: 760px;
-        height: 500px;
+        width: 100%;
+        height: 100vh;
         max-width: 100%;
         border: none;
       }
